# ruminate

./: .dockerignore  .env.example  .flyignore  .gitignore  .gitmodules  .vercelignore  Dockerfile  RUN_WITH_VIDEO_WORKER.md  clone_document_to_all_users.py  delete_old_documents.py  dictionary-icon-preview.html  docker-compose.yml  fix_prod_onboarding_now.py  flip_onboarding_flag.py  fly.toml  manage_onboarding.py  pyproject.toml  requirements_2.txt  reset_dev_onboarding.py  run_backend.sh  set_all_users_onboarded.py  start_ruminate.sh  test_debug_curl.sh  test_debug_mode.py
new_backend_ruminate/: .env.example  README.md  RUN_INSTRUCTIONS.md  VIDEO_WORKER_SETUP.md  alembic.ini  config.py  debug_context_flow.py  dependencies.py  docker-compose.yml  fix_migration.sql  install_fix.sh  main.py  metadata_5b65421e.json  metadata_7d251af5.json  metadata_e382d5dd.json  metadata_ff2d2955.json  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  test_doc_metadata_from_db.py  test_marker_italics.py  test_metadata_quick.py  test_note_generation.py  test_parallel_search.py  test_parallel_search_marker.py  test_postgres_integration.py  test_responses_api_integration.py  test_responses_api_simple.py  test_simple.py  test_video_generation.py  test_video_with_transcript.py  test_web_search_streaming.py  worker.py
new_backend_ruminate/api/: __init__.py  conversation.py
new_backend_ruminate/context/: __init__.py  builder.py  prompts.py  protocols.py  question_generation_builder.py  registry.py
new_backend_ruminate/domain/: __init__.py
new_backend_ruminate/my_env/: pyvenv.cfg
(+533 files in other folders)
