[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "new_backend_ruminate"
version = "0.1.0"
description = "Dream recording backend with video generation"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools]
packages = ["new_backend_ruminate"]